--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@next/font": "13.1.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "mongoose": "^6.9.1",
     "next": "13.1.6",
+    "password-generator": "^2.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.9"
   }
 }
