--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@vercel/analytics": "^1.0.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "mongoose": "^6.9.1",
